--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
     implementation 'com.sparkjava:spark-core:2.9.3'
     implementation 'com.sparkjava:spark-template-handlebars:2.7.1'
-    implementation 'org.slf4j:slf4j-simple:1.7.21'
-    implementation 'org.sql2o:sql2o:1.5.4'
-    implementation group: 'com.h2database', name: 'h2', version: '1.4.191'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
+    implementation 'org.sql2o:sql2o:1.6.0'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    implementation group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
 }
 
 test {
