--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,9 @@ out/
 out
 .gradle
 gradle
-gradlew.bat
-gradlew
-settings.gradle
+# gradlew.bat
+# gradlew
+# settings.gradle
 
 # IntelliJ #
 ############
