--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,11 @@ Thumbs.db
 # Java and Gradle #
 ############
 build/
-.gradle/
 out/
 out
-.gradle
-gradle
+# .gradle/
+# .gradle
+# gradle
 # gradlew.bat
 # gradlew
 # settings.gradle
