--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,4 @@
-# Compiled source #
-############
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-# *.bat
 
-# Packages #
-############
-*.7z
-*.dmg
-*.gz
-*.iso
-# *.jar
-*.rar
-*.tar
-*.zip
-
-# Logs and databases #
-############
-*.log
-
-# OS generated files #
-############
 .DS_Store
 .DS_Store?
 ._*
@@ -38,10 +12,9 @@ Thumbs.db
 build/
 out/
 out
-# .gradle/
-# .gradle
+.gradle/
 # gradle
-# gradlew.bat
+ gradlew.bat
 # gradlew
 # settings.gradle
 
