--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'application'
 }
 
+apply plugin: 'java'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 mainClassName = 'App'
 group 'com.philipOwino'
 version '1.0.0'
